kubernetes/reddit/mongo-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: reddit
    component: mongo
    comment-db: "true" # Лейбл в deployment, чтобы было понятно, что развернуто
    post-db: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit
      component: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: reddit
        component: mongo
        comment-db: "true"
        post-db: "true"
    spec:
      containers:
      - image: mongo:5.0
        name: mongo
        volumeMounts: # Точка монтирования в контейнере (не в POD-е)
        - name: mongo-persistent-storage
          mountPath: /data/db
      volumes: # Ассоциированные с POD-ом Volume-ы
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
