kubernetes/reddit/ui-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
spec:
  ingressClassName: nginx # обязательное поле, используется вместо устаревшей аннотации "kubernetes.io/ingress.class"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 9292
